# MealieToolkit

./: .env.example  .gitignore  Makefile  README.md  categories.txt  pyproject.toml
mealie_toolkit/: __init__.py  categorize.py  categorizer_client.py  main.py  mealie_client.py  ollama_client.py  tagging.py  utils.py
